--- a/infra/website/css/painel_cliente.css
+++ b/infra/website/css/painel_cliente.css
@@ -11,11 +11,18 @@
 .btn {
     background: var(--first-color) !important;
     border: 0;
+    border-color: #008374;
     padding: 14px 45px;
     color: #fff;
     transition: 0.4s;
     border-radius: 50px;
 }
+
+.btn.button-search{
+    background: white !important;
+    outline-color: #008374 !important;
+}
+
 
 .container-solicitar_emprestimo{
     width:500px;
@@ -183,3 +190,139 @@ a{
 }
  
 
+/* Produtos */
+
+body{
+
+    background: #eee;
+}
+
+
+.wrapper{
+
+    margin-top: 30px;
+}
+
+.card{
+
+    border:1px solid #eee;
+    cursor: pointer;
+}
+
+
+.weight{
+
+    margin-top: -65px; 
+    transition: all 0.5s;  
+}
+
+.weight small{
+
+    color: #e2dede;
+}
+
+.buttons {
+        padding: 10px;
+    background-color: #d6d4d44f;
+    border-radius: 4px;
+    position: relative;
+    margin-top: 7px;
+    opacity: 0;
+    transition: all 0.8s;
+}
+
+.dot {
+    height: 14px;
+    width: 14px;
+    
+    border-radius: 50%;
+    position: absolute;
+    left: 27%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 8px;
+    color: #fff;
+    opacity: 0;
+}
+
+.cart-button {
+    height: 48px
+}
+
+.cart-button:focus {
+    box-shadow: none
+}
+
+.cart {
+    position: relative;
+    height: 48px !important;
+    width: 50px;
+    margin-right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    padding: 11px;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: 1s ease-in-out;
+    overflow: hidden;
+
+}
+
+.cart-button.clicked span.dot {
+    animation: item 0.3s ease-in forwards
+}
+
+@keyframes item {
+    0% {
+        opacity: 1;
+        top: 30%;
+        left: 30%
+    }
+
+    25% {
+        opacity: 1;
+        left: 26%;
+        top: 0%
+    }
+
+    50% {
+        opacity: 1;
+        left: 23%;
+        top: -22%
+    }
+
+    75% {
+        opacity: 1;
+        left: 19%;
+        top: -18%
+    }
+
+    100% {
+        opacity: 1;
+        left: 14%;
+        top: 28%
+    }
+}
+
+
+
+.card:hover .buttons{
+
+    opacity: 1;
+}
+
+
+.card:hover .weight{
+
+     margin-top: 10px;
+}
+
+.card:hover{
+
+    transform: scale(1.04);
+    z-index: 2;
+    overflow: hidden;
+}
